# Chess-AWS-Lambda

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  api-test.ps1  fly.toml
src/: error.rs  main.rs  types.rs  utils.rs
src/bot/: engine.rs  heuristics.rs  mod.rs  move_generation.rs  types.rs  utils.rs
src/handlers/: best_move.rs  health.rs  health_check.rs  legal_moves.rs  mod.rs  types.rs  utils.rs  validate_fen.rs
src/moves/: mod.rs
src/routes/: best_move.rs  health.rs  health_check.rs  legal_moves.rs  mod.rs  validate_fen.rs
