[package]
name = "chess-rest-api-rust-pleco"
version = "0.1.0"
edition = "2024"

[dependencies]
axum =  { version = "0.8.4", features = ["macros"] }
pleco = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
shakmaty = "0.29.4"
